@@ -108,19 +108,18 @@ ICE_API CommunicatorPtr initialize(const InitializationData& = InitializationDat
 ICE_API InputStreamPtr createInputStream(const CommunicatorPtr&, const ::std::vector< Byte >&);
 ICE_API InputStreamPtr createInputStream(const CommunicatorPtr&, const ::std::vector< Byte >&,
                                          const EncodingVersion&);
-ICE_API InputStreamPtr createInputStream(const CommunicatorPtr&, const ::std::vector< Byte >&, bool);
-ICE_API InputStreamPtr createInputStream(const CommunicatorPtr&, const ::std::vector< Byte >&,
-                                         const EncodingVersion&, bool);
+ICE_API InputStreamPtr wrapInputStream(const CommunicatorPtr&, const ::std::vector< Byte >&);
+ICE_API InputStreamPtr wrapInputStream(const CommunicatorPtr&, const ::std::vector< Byte >&, const EncodingVersion&);
 ICE_API InputStreamPtr createInputStream(const CommunicatorPtr&,
                                          const ::std::pair< const Ice::Byte*, const Ice::Byte*>&);
 ICE_API InputStreamPtr createInputStream(const CommunicatorPtr&,
                                          const ::std::pair< const Ice::Byte*, const Ice::Byte*>&,
                                          const EncodingVersion&);
-ICE_API InputStreamPtr createInputStream(const CommunicatorPtr&,
-                                         const ::std::pair< const Ice::Byte*, const Ice::Byte*>&, bool);
-ICE_API InputStreamPtr createInputStream(const CommunicatorPtr&,
-                                         const ::std::pair< const Ice::Byte*, const Ice::Byte*>&,
-                                         const EncodingVersion&, bool);
+ICE_API InputStreamPtr wrapInputStream(const CommunicatorPtr&,
+                                       const ::std::pair< const Ice::Byte*, const Ice::Byte*>&);
+ICE_API InputStreamPtr wrapInputStream(const CommunicatorPtr&,
+                                       const ::std::pair< const Ice::Byte*, const Ice::Byte*>&, 
+                                       const EncodingVersion&);
 
 ICE_API OutputStreamPtr createOutputStream(const CommunicatorPtr&);
 ICE_API OutputStreamPtr createOutputStream(const CommunicatorPtr&, const EncodingVersion&);
